# calculatorLab2

./: CMakeLists.txt  Makefile  build.ninja  rules.ninja
src/: calculator.cpp  main.cpp
